# learning-apis

./: .gitignore  Lesson 0.1 - Get request with query parameters.py  Lesson 0.2 - Post request with Json.py  requirements.txt  ui_client.py
Week 1 - API Basics/: Lesson 1 - Weather api.py  README.md  app.py
Week 1 - API Basics/Lesson 2- NewsAPI/: news_app.py  save_top.py
Week 2 - Weather CLI/Project1-weather-cli/: .gitignore  README.md  pyproject.toml  run_weather_daily.ps1
Week 2 - Weather CLI/Project1-weather-cli/data/: weather_log.csv.bak.20250929_201544  weather_log_old.csv
Week 2 - Weather CLI/Project1-weather-cli/james_weather_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
Week 2 - Weather CLI/Project1-weather-cli/week2/: chart_weather.py  http_utils.py  log_weather_daily.py  run_log_and_chart.py  weather_cli.py  weather_one_city.py
Week 3 - Node.JS/: .gitignore  README.md  check_env.js  hello.js  package.json  pnpm-lock.yaml  results.csv  weather.json  weather_args_basic.js  weather_cli.js  weather_flags.js  weather_one_city.js  weather_variations.js
Week 3 - Node.JS/src/: fetchCity.js  hintForError.js  outputSummary.js
Week 3 - Node.JS/tests/: cacheAndCsvAppend.test.js  fetchCity.test.js  hintForError.test.js  quietMode.test.js
Week 4 - Flask API/: app.py
Week 4 - Flask API/data/: weather_log.csv
Week 4 - Flask API/templates/: ui.html
Week 5 - CRUD/: .env.example  .gitignore  README.md  pytest.ini  requirements.txt
Week 5 - CRUD/app/: __init__.py  config.py  models.py
Week 5 - CRUD/scripts/: seed.py
(+2 files in other folders)
